# hex-server

./: .dir-locals.el  README.md  hex-server.cabal  stack.yaml
app/: sdl.hs
libx11/: Dockerfile  Makefile  guest-run.sh  host-run.sh  sources.list  xcb.c
src/: BinaryView.hs  Hex.hs
src/Hex/: Builders.hs  Constants.hs  Parsers.hs  Types.hs
test/: Spec.hs
