name:
  hex-server
version:
  0.0.0
synopsis:
  Minimal X11 server written in Haskell
description:
  A minimal X11 server written in Haskell.
license:
  BSD3
license-file:
  LICENSE
author:
  Chris Done
maintainer:
  chrisdone@gmail.com
copyright:
  2018 Chris Done
category:
  Graphics
build-type:
  Simple
extra-source-files:
  README.md
cabal-version:
  >=1.10

library
  hs-source-dirs:
    src
  ghc-options:
    -O2  -Wall
  default-language:
    Haskell2010
  exposed-modules:
    Hex
    Hex.Types
    Hex.Parsers
    Hex.Builders
    BinaryView
  build-depends:
    base,
    conduit-extra,
    conduit,
    unliftio-core,
    monad-logger,
    async,
    text,
    attoparsec,
    bytestring,
    attoparsec-binary,
    transformers,
    mtl,
    containers,
    exceptions

executable hex-sdl
  hs-source-dirs:
    app
  main-is:
    sdl.hs
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -O2 -Wall
  default-language:
    Haskell2010
  build-depends:
    base,
    hex-server,
    linear,
    sdl2,
    sdl2-cairo,
    bytestring,
    text,
    mtl,
    cairo,
    unordered-containers,
    containers,
    monad-logger

test-suite hex-test
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Spec.hs
  build-depends:
    base,
    hex-server,
    hspec,
    async,
    X11,
    monad-logger,
    unliftio-core
  ghc-options:
    -Wall -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:
    Haskell2010
